--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,18 +2,16 @@ name: Python CI/CD Pipeline
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
   workflow_dispatch:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-
       - name: Checkout code
         uses: actions/checkout@v4
 
@@ -25,11 +23,11 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      - name: Run pytest
-        run: pytest
+      - name: Run pytest and unittest
+        run: PYTHONPATH=.pytest tests && python -m unittest discover tests
 
-      - name: Run unittest
-        run: python -m unittest discover tests
+      # - name: Run unittest
+      #   run: python -m unittest discover tests
 
       - name: Build project
         run: zip -r build.zip .
